--- a/css/query.css
+++ b/css/query.css
@@ -25,10 +25,8 @@
     grid-template-columns: 1fr;
   }
 
-  .banner-wrapper {
-    /* width: 100%; */
-    background-size: 100%;
-    background-repeat: no-repeat;
+  .banner-text {
+    top: 20%;
   }
 
   .banner-wrapper .banner-text .trending {
@@ -145,25 +143,25 @@
     grid-template-columns: 1fr;
   }
 
-  .banner .banner-wrapper {
-    /* width: 100%; */
-    background-size: 100%;
-    background-repeat: no-repeat;
-    min-height: 48rem;
-  }
-
   .banner-wrapper .banner-text .trending {
-    font-size: 2rem;
+    font-size: 1.4rem;
   }
 
   .banner-wrapper .banner-text .heading {
-    font-size: 2.6rem;
+    font-size: 2rem;
   }
 
   .banner-wrapper .banner-text .price {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
   }
 
+  .banner-wrapper .banner-text .link {
+    font-size: 1rem;
+  }
+
+  .banner-wrapper .banner-text span {
+    font-size: 2rem;
+  }
   .testimonial {
     width: 100%;
     text-align: center;
@@ -205,5 +203,33 @@
   .main-nav {
     flex-direction: column;
     gap: 1rem;
+  }
+}
+
+@media (max-width: 549px) {
+  .banner-text {
+    top: 10%;
+    margin-left: 5rem;
+  }
+
+  .banner-wrapper .banner-text .trending {
+    font-size: 1rem;
+  }
+
+  .banner-wrapper .banner-text .heading {
+    font-size: 1.3rem;
+  }
+
+  .banner-wrapper .banner-text .price {
+    font-size: 1rem;
+  }
+
+  .banner-wrapper .banner-text .link {
+    font-size: 0.7rem;
+    padding: 0.5rem;
+  }
+
+  .banner-wrapper .banner-text span {
+    font-size: 1.3rem;
   }
 }
